--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
   host:
     - python
     - maturin >=1,<2
-    - pip
+    - pip <=24.1
     - xz  # [linux]
   run:
     - pyarrow-hotfix
