--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,8 @@ requirements:
     - {{ stdlib("c") }}    # [linux]
     - m2-sed               # [win]
     - sed                  # [not win]
+    # see https://aws.github.io/aws-lc-rs/requirements/linux.html
+    - cmake                # [linux and not (x86_64 or aarch64)]
   host:
     - python
     - maturin >=1,<2
