--- a/.ci_support/osx_arm64_is_python_mintruepython3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_is_python_mintruepython3.9.____cpython.yaml
@@ -1,23 +1,17 @@
-c_compiler:
-- gcc
-c_compiler_version:
-- '14'
-c_stdlib:
-- sysroot
-c_stdlib_version:
-- '2.17'
-cdt_name:
-- conda
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
+MACOSX_SDK_VERSION:
+- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-docker_image:
-- quay.io/condaforge/linux-anvil-x86_64:alma9
 is_abi3:
 - true
-liblzma_devel:
-- '5'
+is_python_min:
+- true
+macos_machine:
+- arm64-apple-darwin20.0.0
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -29,4 +23,7 @@ python_min:
 rust_compiler:
 - rust
 target_platform:
-- linux-64
+- osx-arm64
+zip_keys:
+- - python
+  - is_python_min
