--- a/.ci_support/win_64_is_python_mintruepython3.9.____cpython.yaml
+++ b/.ci_support/win_64_is_python_mintruepython3.9.____cpython.yaml
@@ -1,15 +1,11 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
-MACOSX_SDK_VERSION:
-- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 is_abi3:
 - true
-macos_machine:
-- arm64-apple-darwin20.0.0
+is_python_min:
+- true
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -21,4 +17,7 @@ python_min:
 rust_compiler:
 - rust
 target_platform:
-- osx-arm64
+- win-64
+zip_keys:
+- - python
+  - is_python_min
