--- a/.ci_support/linux_aarch64_is_python_mintruepython3.9.____cpython.yaml
+++ b/.ci_support/linux_aarch64_is_python_mintruepython3.9.____cpython.yaml
@@ -14,6 +14,10 @@ channel_targets:
 - conda-forge main
 docker_image:
 - quay.io/condaforge/linux-anvil-x86_64:alma9
+is_abi3:
+- true
+is_python_min:
+- true
 liblzma_devel:
 - '5'
 pin_run_as_build:
@@ -22,7 +26,12 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - 3.9.* *_cpython
+python_min:
+- '3.9'
 rust_compiler:
 - rust
 target_platform:
-- linux-64
+- linux-aarch64
+zip_keys:
+- - python
+  - is_python_min
