--- a/.ci_support/osx_64_is_python_mintruepython3.9.____cpython.yaml
+++ b/.ci_support/osx_64_is_python_mintruepython3.9.____cpython.yaml
@@ -6,6 +6,10 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+is_abi3:
+- true
+is_python_min:
+- true
 macos_machine:
 - x86_64-apple-darwin13.4.0
 pin_run_as_build:
@@ -14,7 +18,12 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - 3.9.* *_cpython
+python_min:
+- '3.9'
 rust_compiler:
 - rust
 target_platform:
 - osx-64
+zip_keys:
+- - python
+  - is_python_min
