--- a/.ci_support/osx_arm64_is_python_mintruepython3.9.____cpython.yaml
+++ b/.ci_support/osx_arm64_is_python_mintruepython3.9.____cpython.yaml
@@ -6,6 +6,10 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+is_abi3:
+- true
+is_python_min:
+- true
 macos_machine:
 - arm64-apple-darwin20.0.0
 pin_run_as_build:
@@ -13,8 +17,13 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.13.* *_cp313
+- 3.9.* *_cpython
+python_min:
+- '3.9'
 rust_compiler:
 - rust
 target_platform:
 - osx-arm64
+zip_keys:
+- - python
+  - is_python_min
