--- a/.ci_support/win_64_is_python_mintruepython3.9.____cpython.yaml
+++ b/.ci_support/win_64_is_python_mintruepython3.9.____cpython.yaml
@@ -2,13 +2,22 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+is_abi3:
+- true
+is_python_min:
+- true
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.13.* *_cp313
+- 3.9.* *_cpython
+python_min:
+- '3.9'
 rust_compiler:
 - rust
 target_platform:
 - win-64
+zip_keys:
+- - python
+  - is_python_min
